[tool.poetry]
name = "imagecollagemaker"
version = "0.1.0"
description = ""
authors = ["Khalit <khalithartmann@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "4.5.5.62"
lapjv = "1.3.10"
pyinstaller = "4.8"
imagesize = "1.3.0"
tqdm = "^4.64.1"
wheel = "^0.38.4"
itchat = "^1.3.10"
tk = "^0.1.0"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
